--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,6 +7,7 @@
 @use '@angular/material' as mat;
 @use 'styles/theme-colors' as theme-color;
 @use 'styles/override/toolbar.scss';
+@use 'styles/custom-color';
 
 html {
   @include mat.theme((
