--- a/src/app/features/home/home.html
+++ b/src/app/features/home/home.html
@@ -1,1 +1,8 @@
 <app-balance [transactions]="transactions()"></app-balance>
+
+<ul>
+    @for (item of transactions(); track item) {
+        <app-transaction-item [transaction]="item"></app-transaction-item>
+    }
+</ul>
+
