--- a/src/app/features/home/home.html
+++ b/src/app/features/home/home.html
@@ -3,6 +3,8 @@
 <ul>
     @for (item of transactions(); track item) {
         <app-transaction-item [transaction]="item"></app-transaction-item>
+    } @empty {
+        <app-no-transactions />
     }
 </ul>
 
