--- a/src/app/features/home/home.html
+++ b/src/app/features/home/home.html
@@ -1,5 +1,9 @@
 <app-balance [transactions]="transactions()"></app-balance>
 
+<div class="btnAction">
+    <button mat-raised-button routerLink="create">Nova transação</button>
+</div>
+
 <ul>
     @for (item of transactions(); track item) {
         <app-transaction-item [transaction]="item"></app-transaction-item>
